--- a/css/index.css
+++ b/css/index.css
@@ -32,7 +32,7 @@ a {
     background-color: white;
     color: black;
     border: black 1px solid;
-
+    margin: 2px;
     padding: 8px 12px;
     text-align: center;
     text-decoration: none;
