--- a/golden-dome-market/css/style.css
+++ b/golden-dome-market/css/style.css
@@ -48,7 +48,8 @@ body{
     display: inline-block;
     width: 100%;
     border: dodgerblue 2px solid;
-    padding: 6px;
+    border-radius: 2px;
+    padding: 8px;
     margin-bottom: 10px;
 }
 .left-items{
@@ -66,6 +67,7 @@ body{
     font-size: 15px;
     padding: 8px;
     margin: 8px;
+    border-radius: 4px;
 }
 
 #reset-button{
