--- a/golden-dome-market/css/style.css
+++ b/golden-dome-market/css/style.css
@@ -36,10 +36,10 @@ body{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     margin: 5% auto;
     width: 60%;
-    padding: 2%;
+    padding: 4%;
     background-color: white;
     box-sizing: content-box;
-    overflow: auto;
+    /*overflow: auto;*/
 }
 #content h3{
     font-weight: lighter;
@@ -100,4 +100,8 @@ body{
     padding: 8px;
     margin: 6px;
     float: right;
+}
+#product-list{
+    width: 100%;
+    float: none;
 }
