--- a/golden-dome-market/css/style.css
+++ b/golden-dome-market/css/style.css
@@ -39,7 +39,7 @@ body{
     padding: 4%;
     background-color: white;
     box-sizing: content-box;
-    /*overflow: auto;*/
+    overflow: auto;
 }
 #content h3{
     font-weight: lighter;
